cmake_minimum_required(VERSION 3.15)
project(Philae C)
set(CMAKE_C_STANDARD 99)
add_executable(Philae 7colors.c maths.c maths.h)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
find_package(SDL2 REQUIRED)
include_directories(${PROJECT_NAME} ${SDL2_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})